2018-04-20  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/render.c (ConvertPrimitiveToPath):  Fixed a bug
	in which SVG paths containing multiple open subpaths were
	not being processed correctly, resulting in incorrect
	output.  This fixes ticket #94.

2018-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (DecodeImage): Fix use of uninitialized memory
	during error condition in decoder. Fixes oss-fuzz 7732
	"graphicsmagick/coder_GIF_fuzzer: Heap-buffer-overflow in
	DecodeImage". (Credit to OSS-Fuzz)

	* coders/txt.c (ReadTXTImage): Assure that all image pixels are
	initialized to black.

	* Magick++/demo/zoom.cpp (main): Add a -read-blob option to read
	input file into a Blob so that it is read by the Blob reader
	rather than the file reader.  Default the output Geometry to the
	input image geometry in case the user does not specify a resize
	resolution or geometry.

	* Magick++/tests/readWriteBlob.cpp (main): Improve the quality of
	code which reads a file into memory for Blob testing.

	* magick/blob.c (BlobToImage): Add exception reports for the cases
	where 'magick' was not set and the file format could not be
	deduced from its header.  Previously a null Image pointer was
	being returned without any exception being thrown.

2018-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Assure that CbCr layer initializes
	all channels if it is the first element of a planar DPX.  Fixes
	oss-fuzz 7703 "graphicsmagick/coder_DPX_fuzzer:
	Use-of-uninitialized-value in WriteDPXImage". (Credit to OSS-Fuzz)

	* coders/pict.c (ReadPICTImage): Don't refer to filename member of
	ImageInfo which was just destroyed. Much thanks to Alex Gay for
	finding this.  Should fix oss-fuzz 6867
	"graphicsmagick/coder_PCT_fuzzer: Heap-use-after-free in
	GetLocaleExceptionMessage". (Credit to OSS-Fuzz).

2018-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
