@@ -1,3 +1,8 @@
+2018-04-21  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/topol.c Emit error when tile storage overflows image data;
+        fixes oss-fuzz 7769 thanks to oss-fuzz.
+
 2018-04-20  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
 
 	* magick/render.c (ConvertPrimitiveToPath):  Fixed a bug
